# matrixcurator

./: .gitignore  Dockerfile  README.md  app.py  benchmark.py  development.env.template  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_process_pdf.py  test_routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CustomExtraction.jsx
frontend/src/services/: api.js
src/: utils.py
src/config/: prompts.yaml
src/data/benchmarks/: Mesozoic_Echinoidea_Smith_2007_KEY.nex
src/llm/: external_service.py  services.py
src/nex/: exceptions.py  services.py
src/parser/: __init__.py  csv_converter_service.py  external_services.py
tests/: conftest.py  test_curator.py
tests/test_files/: Mosasauridae_Makadi_et_al_2012_CHARACTERS.docx  Oryctocephalinae_Sundberg_2006.nex  Supplementary 3 R3.txt
